--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo test",
-    "pretest": "npm run qualityCheck && echo pretest",
-    "posttest": "echo posttest",
-    "qualityCheck" : "echo qualityCheck",
-    "prequalityCheck" : "echo prequalityCheck",
-    "postqualityCheck" : "echo postqualityCheck"
+    "start": "node app.js",
+    "prestart": "npm run build",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -20,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/simonLouvet/testNPM/issues"
   },
-  "homepage": "https://github.com/simonLouvet/testNPM#readme"
+  "homepage": "https://github.com/simonLouvet/testNPM#readme",
+  "dependencies": {
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.11.0"
+  }
 }
