--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "prestart": "npm run build",
-    "build": "webpack"
+    "build": "webpack",
+    "prebuild": "rimraf public"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "html-webpack-plugin": "^2.30.1",
+    "rimraf": "^2.6.2",
     "webpack": "^3.11.0"
   }
 }
