--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node public/back.js",
     "prestart": "npm run build",
     "build": "webpack",
     "prebuild": "rimraf public",
